@@ -4,6 +4,8 @@ Things to do on the panel, in no particular order:
 
 * When recheck all TryExec each time a menu is shown, or perhaps in background.
 
+* Configuration boxes take effect immediately, no apply
+
 [ Hmmmm ... needs some thought ]
 * RootApplication dentry type support.  These would be items to run other apps
   as root.  This would require pam support of course.  So for things like
@@ -13,23 +15,16 @@ Things to do on the panel, in no particular order:
   was toggled on somewhere (global prefs I guess).  This is high priority
   [Taken: George]
 
-* make vertical explicit hide with a thin long button along the edge of the
-  panel rather then on the sides. (the motion would be like it is in
-  autohide.) Though I guess the current should be default as it's less
-  wastefull for space.
-
 * add a way to set up a custom icon for a menu button instead of using the
   one specified in the menu itself
 
-* export more functionality through the CORBA interface, eventually I think
-  we should have a per panel interface so that the panels could be
-  manipulated through corba directly, we especially need to export a way to
-  launch external applets and to add the internal ones, we can also have
-  things to move panels, and to change their background
+Vertigo/2.0 items
 
-Vertigo items
+* Bonobo the whole bit, that is:  Make the whole thing bonobo components, to
+  allow even customization of the panel from outside.  Also the applets would become
+  bonobo controls.
 
-* Bonobo the whole bit
+* GConf/GnoP using configuration boxes
 
 * tabbed panels
 
@@ -39,3 +34,8 @@ Vertigo items
 
 * strech hint for applets so that the panel can optionally strech applets if
   it has the space and shrink em down again once it needs the space again
+
+* make vertical explicit hide with a thin long button along the edge of the
+  panel rather then on the sides. (the motion would be like it is in
+  autohide.) Though I guess the current should be default as it's less
+  wastefull for space.
