@@ -1,3 +1,11 @@
+Sat Sep 09 15:54:20 2000  George Lebl <jirka@5z.com>
+
+	* menu.c:  Remove an old standing "UglyHack(tm)" and fix copying
+	  to favourites even with merged menus etc.  It now copies only
+	  the neccessary files as well and preserves old order files.
+
+	* menu-fentry.c: just cosmetic cleanups
+
 Tue Sep 05 21:22:55 2000  George Lebl <jirka@5z.com>
 
 	* gnome-panel-properties.c: When copying a config, copy all
